<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
         <EditText
             android:hint="@string/password_text"
             android:id="@+id/passwordId"
             android:layout_marginTop="10dp"
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/email_sign_in_button"
            android:text="@string/login_text"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/or_text"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/create_account_id"
            android:text="@string/create_account_text"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>