<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".MainActivity"
   >

    <TextView
        android:id="@+id/titleId"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth"
        android:text="@string/title_text"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/text_id"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/start_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:text="@string/write_text"
        android:textColor="@android:color/holo_blue_dark"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>