<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PostJournalActivity">

    <EditText
        android:id="@+id/post_description"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/thoughts_text"
        android:padding="10dp"
        android:textSize="18sp"
        android:inputType="textMultiLine"
        android:background="@drawable/input_outline"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title" />

    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="398dp"
        android:layout_height="240dp"
        android:src="@drawable/image_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/post_username_textview"
        android:layout_width="123dp"
        android:layout_height="36dp"
        android:text="Mihir"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/post_imageView"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="@+id/post_imageView"
        app:layout_constraintTop_toBottomOf="@+id/postCameraButton" />

    <TextView
        android:id="@+id/post_date_textview"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:text="Today"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintEnd_toEndOf="@+id/post_imageView"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="@+id/post_imageView"
        app:layout_constraintTop_toBottomOf="@+id/post_username_textview"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="@+id/post_imageView"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/post_imageView"
        app:layout_constraintTop_toTopOf="@+id/post_imageView"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_title"
        android:layout_width="374dp"
        android:layout_height="42dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/title_hint_text"
        android:background="@drawable/input_outline"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postCameraButton" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description" />

    <Button
        android:id="@+id/post_save_journal_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/save_text"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="512dp" />


</androidx.constraintlayout.widget.ConstraintLayout>